Added the new toggle nightvision key to the control menu #build

--- a/src/main/resources/assets/vampirism/lang/de_DE.lang
+++ b/src/main/resources/assets/vampirism/lang/de_DE.lang
@@ -42,6 +42,7 @@ keys.vampirism.category=Vampirismus
 keys.vampirism.suck=Blut Saugen
 keys.vampirism.auto=Automatisches Füllen der Blut Flaschen
 keys.vampirism.skill=Aktiviere Vampir Fähigkeiten
+key.vampirism.vision=Wechsle Sicht
 
 
 #General
