--- a/src/main/resources/assets/vampirism/lang/pt_BR.lang
+++ b/src/main/resources/assets/vampirism/lang/pt_BR.lang
@@ -3,7 +3,8 @@ entity.vampirism.vampireHunter.name=Caçador de Vampiro
 entity.vampirism.vampire.name=Vampiro
 entity.vampirism.ghost.name=Fantasma
 entity.vampirism.vampireLord.name=Lorde Vampiro
-entity.vampirism.vampireMinion.name=Vampiro Bebê
+entity.vampirism.vampireMinionR.name=Vampiro Bebê
+entity.vampirism.vampireMinionS.name=Vampiro Bebê
 entity.vampirism.dracula.name=Dracula
 
 # Items
