Added WIP Gui for minion control

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -82,6 +82,7 @@ text.vampirism:minion=Minion
 text.vampirism:lord=Lord
 text.vampirism:normal_vision=Normal Vision
 text.vampirism:night_vision=Night Vision
+text.vampirism:no_control_minion=You have no control over this minion
 
 #Skill
 skill.vampirism.bat_skill=Toggle Batmode
