Changed language system a little bit

--- a/src/main/resources/assets/vampirism/lang/de_DE.lang
+++ b/src/main/resources/assets/vampirism/lang/de_DE.lang
@@ -1,43 +1,43 @@
 # Entitys
-entity.vampirism:vampireHunter.name=Vampir Jäger
-entity.vampirism:vampire.name=Vampir
-entity.vampirism:ghost.name=Geist
-entity.vampirism:vampireLord.name=Vampir Lord
-entity.vampirism:vampireMinionR.name=Vampir Sklave
-entity.vampirism:vampireMinionS.name=Vampir Sklave
+entity.vampirism.vampireHunter.name=Vampir Jäger
+entity.vampirism.vampire.name=Vampir
+entity.vampirism.ghost.name=Geist
+entity.vampirism.vampireLord.name=Vampir Lord
+entity.vampirism.vampireMinionR.name=Vampir Sklave
+entity.vampirism.vampireMinionS.name=Vampir Sklave
 entity.vampirism.blinding_bat.name=Fledermaus
-entity.vampirism:dracula.name=Dracula
+entity.vampirism.dracula.name=Dracula
 entity.vampirism.dead_mob.name=Toter mob
 
 # Items
-item.vampirism:vampiresFear.name=Vampir's Angst
-item.vampirism:bloodBottle.name=Blut Flasche
-item.vampirism:vampireFang.name=Vampirzahn
-item.vampirism:pitchfork.name=Mistgabel
-item.vampirism:humanHearth.name=Menschliches Herz
-item.vampirism:torch.name=Fackel
-item.vampirism:pureBlood.name=Reines Blut
-item.vampirism:sunscreen.name=Sonnenschutz
-item.vampirism:coffin.name=Sarg
-item.vampirism:vampireArmor_helmet.name=Vampir Helm
-item.vampirism:vampireArmor_leggings.name=Vampir Hose
-item.vampirism:vampireArmor_boots.name=Vampir Schuhe
-item.vampirism:vampireArmor_chestplate.name=Vampir Brustplatte
+item.vampirism.vampiresFear.name=Vampir's Angst
+item.vampirism.bloodBottle.name=Blut Flasche
+item.vampirism.vampireFang.name=Vampirzahn
+item.vampirism.pitchfork.name=Mistgabel
+item.vampirism.humanHearth.name=Menschliches Herz
+item.vampirism.torch.name=Fackel
+item.vampirism.pureBlood.name=Reines Blut
+item.vampirism.sunscreen.name=Sonnenschutz
+item.vampirism.coffin.name=Sarg
+item.vampirism.vampireArmor_helmet.name=Vampir Helm
+item.vampirism.vampireArmor_leggings.name=Vampir Hose
+item.vampirism.vampireArmor_boots.name=Vampir Schuhe
+item.vampirism.vampireArmor_chestplate.name=Vampir Brustplatte
 
 # Blocks
-block.vampirism:bloodAltar.name=Blood Altar der Sättigung
-block.vampirism:bloodAltarTier2.name=Blood Altar der Inspiration
-block.vampirism:bloodAltarTier3.name=Blood Altar 3
-block.vampirism:bloodAltarTier4.name=Blood Altar der Infusion
-block.vampirism:bloodAltarTier4Tip.name=Blood Altar der Infusion Tip
-block.vampirism:churchAltar.name=Altar der Reinigung
-block.vampirism:cursedEarth.name=Verfluchte Erde
-block.vampirism:vampireOrchid.name=Vampir Orchidee
-block.vampirism:blockCoffin.name=Sarg
+block.vampirism.bloodAltar.name=Blood Altar der Sättigung
+block.vampirism.bloodAltarTier2.name=Blood Altar der Inspiration
+block.vampirism.bloodAltarTier3.name=Blood Altar 3
+block.vampirism.bloodAltarTier4.name=Blood Altar der Infusion
+block.vampirism.bloodAltarTier4Tip.name=Blood Altar der Infusion Tip
+block.vampirism.churchAltar.name=Altar der Reinigung
+block.vampirism.cursedEarth.name=Verfluchte Erde
+block.vampirism.vampireOrchid.name=Vampir Orchidee
+block.vampirism.blockCoffin.name=Sarg
 
 #GUI
-gui.vampirism:revertback.head=Verwandle dich zurück in einen normalen Menschen
-gui.vampirism:revertback.desc=Du verlierst alle Level und stirbst
+gui.vampirism.revertback.head=Verwandle dich zurück in einen normalen Menschen
+gui.vampirism.revertback.desc=Du verlierst alle Level und stirbst
 
 # Keys
 keys.vampirism.category=Vampirismus
@@ -50,36 +50,36 @@ key.vampirism.vision=Wechsle Sicht
 #General
 itemGroup.vampirism=Vampirismus
 death.attack.sun=%1$s mochte die Sonne nicht
-potion.vampirism:sunscreen=Sonnenschutz
-potion.vampirism:thirst=Durst
-potion.vampirism:saturation=Sättigung
-text.vampirism:skill.level_to_low=Dein Vampire Level ist zu niedrig dafür
-text.vampirism:skill.cooldown_not_over=Bitte warte bis die Abklingzeit vorbei ist
-text.vampirism:entity_level=Level
-text.vampirism:ritual_missing_times=Dir fehlen Items für das Ritual
-text.vampirism:ritual_structure_wrong=Die Struktur ist falsch für dieses Ritual
-text.vampirism:ritual_level_wrong=Du kannst den Altar auf diesem Level nicht verwenden
-text.vampirism:ritual_still_running=Das Ritual läuft noch
-text.vampirism:not_enough_blood=Da ist nicht genügend Blut im Altar
-text.vampirism:ritual_requirements_not_met=Nicht alle Vorraussetzungen sind erfüllt
-text.vampirism:purity=Reinheit
-text.vampirism:auto_fill_enabled=Automatisches Füllen aktiviert
-text.vampirism:auto_fill_disabled=Automatisches Füllen deaktiviert
-text.vampirism:ritual_no_vampire=Für dieses Ritual musst du ein Vampir sein
-text.vampirism:skill.deactivated_by_serveradmin=Diese Fähigkeit wurde durch den Serveradmin deaktiviert
-text.vampirism:cant_fly_day=Du kannst am Tag nicht fliegen
-text.vampirism:no_more_minions=Du kannst nicht noch mehr Minions kontrollieren
-text.vampirism:coffin.noSleep=Du kannst nur am Tag schlafen
-text.vampirism:coffin.occupied=Dieser Sarg ist besetzt
-text.vampirism:coffin.stopsleeping=Verlasse Sarg
-text.vampirism:blood_left=Blut übrig
-text.vampirism:blood=Blut
-text.vampirism:vampirelevel=Vampirlevel
-text.vampirism:entitysblood=Entity's blood
-text.vampirism:minion=Minion
-text.vampirism:lord=Sklave
-text.vampirism:normal_vision=Normale Sicht
-text.vampirism:night_vision=Nachtsicht
+potion.vampirism.sunscreen=Sonnenschutz
+potion.vampirism.thirst=Durst
+potion.vampirism.saturation=Sättigung
+text.vampirism.skill.level_to_low=Dein Vampire Level ist zu niedrig dafür
+text.vampirism.skill.cooldown_not_over=Bitte warte bis die Abklingzeit vorbei ist
+text.vampirism.entity_level=Level
+text.vampirism.ritual_missing_times=Dir fehlen Items für das Ritual
+text.vampirism.ritual_structure_wrong=Die Struktur ist falsch für dieses Ritual
+text.vampirism.ritual_level_wrong=Du kannst den Altar auf diesem Level nicht verwenden
+text.vampirism.ritual_still_running=Das Ritual läuft noch
+text.vampirism.not_enough_blood=Da ist nicht genügend Blut im Altar
+text.vampirism.ritual_requirements_not_met=Nicht alle Vorraussetzungen sind erfüllt
+text.vampirism.purity=Reinheit
+text.vampirism.auto_fill_enabled=Automatisches Füllen aktiviert
+text.vampirism.auto_fill_disabled=Automatisches Füllen deaktiviert
+text.vampirism.ritual_no_vampire=Für dieses Ritual musst du ein Vampir sein
+text.vampirism.skill.deactivated_by_serveradmin=Diese Fähigkeit wurde durch den Serveradmin deaktiviert
+text.vampirism.cant_fly_day=Du kannst am Tag nicht fliegen
+text.vampirism.no_more_minions=Du kannst nicht noch mehr Minions kontrollieren
+text.vampirism.coffin.noSleep=Du kannst nur am Tag schlafen
+text.vampirism.coffin.occupied=Dieser Sarg ist besetzt
+text.vampirism.coffin.stopsleeping=Verlasse Sarg
+text.vampirism.blood_left=Blut übrig
+text.vampirism.blood=Blut
+text.vampirism.vampirelevel=Vampirlevel
+text.vampirism.entitysblood=Entity's blood
+text.vampirism.minion=Minion
+text.vampirism.lord=Sklave
+text.vampirism.normal_vision=Normale Sicht
+text.vampirism.night_vision=Nachtsicht
 
 #Skill
 skill.vampirism.bat_skill=Aktiviere Fledermaus
