--- a/src/main/resources/assets/vampirism/lang/fr_FR.lang
+++ b/src/main/resources/assets/vampirism/lang/fr_FR.lang
@@ -8,29 +8,29 @@ entity.vampirism.vampireMinionR.name=Favori de vampire
 entity.vampirism.dracula.name=Dracula
 
 # Items
-item.vampirism:vampiresFear.name=Frayeur de vampire
-item.vampirism:bloodBottle.name=Bouteille de sang
-item.vampirism:vampireFang.name=Canine de vampire
-item.vampirism:pitchfork.name=Fourche à foin
-item.vampirism:humanHeart.name=Coeur humain
-item.vampirism:torch.name=Torche
-item.vampirism:pureBlood.name=Sang pur
-item.vampirism:sunscreen.name=Crème solaire
+item.vampirism.vampiresFear.name=Frayeur de vampire
+item.vampirism.bloodBottle.name=Bouteille de sang
+item.vampirism.vampireFang.name=Canine de vampire
+item.vampirism.pitchfork.name=Fourche à foin
+item.vampirism.humanHeart.name=Coeur humain
+item.vampirism.torch.name=Torche
+item.vampirism.pureBlood.name=Sang pur
+item.vampirism.sunscreen.name=Crème solaire
 
 # Blocks
-block.vampirism:bloodAltar.name=Blood Altar of Saturation
-block.vampirism:bloodAltarTier2.name=Blood Altar of Inspiration
-block.vampirism:bloodAltarTier3.name=Blood Altar 3
-block.vampirism:bloodAltarTier4.name=Blood Altar of Infusion
-block.vampirism:bloodAltarTier4Tip.name=Blood Altar of Infusion Tip
-block.vampirism:churchAltar.name=Autel de nettoyage
-block.vampirism:cursedEarth.name=Terre maudite
-block.vampirism:vampireOrchid.name=Orchidé vampire
+block.vampirism.bloodAltar.name=Blood Altar of Saturation
+block.vampirism.bloodAltarTier2.name=Blood Altar of Inspiration
+block.vampirism.bloodAltarTier3.name=Blood Altar 3
+block.vampirism.bloodAltarTier4.name=Blood Altar of Infusion
+block.vampirism.bloodAltarTier4Tip.name=Blood Altar of Infusion Tip
+block.vampirism.churchAltar.name=Autel de nettoyage
+block.vampirism.cursedEarth.name=Terre maudite
+block.vampirism.vampireOrchid.name=Orchidé vampire
 
 
 #GUI
-gui.vampirism:revertback.head=Retransformation en humain normal
-gui.vampirism:revertback.desc=Vous perdrez tous vos niveaux et mourerez
+gui.vampirism.revertback.head=Retransformation en humain normal
+gui.vampirism.revertback.desc=Vous perdrez tous vos niveaux et mourerez
 
 # Keys
 keys.vampirism.category=Vampirisme
@@ -41,23 +41,23 @@ keys.vampirism.skill=Active les compétence de vampire
 #General
 itemGroup.vampirism=Vampirisme
 death.attack.sun=%1$s n'a pas aimé le soleil
-potion.vampirism:sunscreen=Crème solaire
-potion.vampirism:thirst=Soif
-potion.vampirism:saturation=Saturation
-potion.vampirism:sanguinare=Sanguinare Vampiris
-text.vampirism:skill.level_to_low=Votre niveau de vampire est trop bas pour celà
-text.vampirism:skill.cooldown_not_over=Veuillez attendre jusqu'à la fin de votre récupération
-text.vampirism:entity_level=Niveau
-text.vampirism:ritual_missing_times=Vous avez oublié des éléments pour ce rituel
-text.vampirism:ritual_structure_wrong=La structure est mauvaise pour ce rituel
-text.vampirism:ritual_level_wrong=Vous ne pouvez pas utiliser cet autel à ce niveau
-text.vampirism:not_enough_blood=Il n'y a pas assez de sang dans l'autel
-text.vampirism:ritual_still_running=Le rituel est toujours en cours
-text.vampirism:ritual_requirements_not_met=Les exigences pour ce rituel n'ont pas toutes été respectées
-text.vampirism:purity=Pureté
-text.vampirism:auto_fill_enabled=Remplissage auto activé
-text.vampirism:auto_fill_disabled=Remplissage auto désactivé
-text.vampirism:skill.deactivated_by_serveradmin=Cette capacité est désactivée par votre administrateur serveur
+potion.vampirism.sunscreen=Crème solaire
+potion.vampirism.thirst=Soif
+potion.vampirism.saturation=Saturation
+potion.vampirism.sanguinare=Sanguinare Vampiris
+text.vampirism.skill.level_to_low=Votre niveau de vampire est trop bas pour celà
+text.vampirism.skill.cooldown_not_over=Veuillez attendre jusqu'à la fin de votre récupération
+text.vampirism.entity_level=Niveau
+text.vampirism.ritual_missing_times=Vous avez oublié des éléments pour ce rituel
+text.vampirism.ritual_structure_wrong=La structure est mauvaise pour ce rituel
+text.vampirism.ritual_level_wrong=Vous ne pouvez pas utiliser cet autel à ce niveau
+text.vampirism.not_enough_blood=Il n'y a pas assez de sang dans l'autel
+text.vampirism.ritual_still_running=Le rituel est toujours en cours
+text.vampirism.ritual_requirements_not_met=Les exigences pour ce rituel n'ont pas toutes été respectées
+text.vampirism.purity=Pureté
+text.vampirism.auto_fill_enabled=Remplissage auto activé
+text.vampirism.auto_fill_disabled=Remplissage auto désactivé
+text.vampirism.skill.deactivated_by_serveradmin=Cette capacité est désactivée par votre administrateur serveur
 
 #Config
 category.vampirism.balance=Propriétés d'équilibrage
