--- a/src/main/resources/assets/vampirism/lang/vampirism.lang
+++ b/src/main/resources/assets/vampirism/lang/vampirism.lang
@@ -87,9 +87,8 @@ text.vampirism.thanks=Thanks
 text.vampirism.coming_back=I'm coming back, my lord
 text.vampirism.sorry_i_died_while_doing=My lord, I'm sorry but I died while fulfilling your task
 text.vampirism.current_task=Current task
-text.vampirism.blood=Blood
-text.vampirism.structure=Structure
-text.vampirism.pillar_blocks=Pillar blocks
+text.vampirism.hello
+text.vampirism.goodbye=Goodbye
 
 #Skill
 skill.vampirism.bat_skill=Toggle Batmode
