Added a few blocks, worked on schematics saving (e.g. paintings), added a few buildings

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -35,6 +35,7 @@ block.vampirism.churchAltar.name=Altar of Cleansing
 block.vampirism.cursedEarth.name=Cursed Earth
 block.vampirism.vampireOrchid.name=Vampire Orchid
 block.vampirism.blockCoffin.name=Coffin
+block.vampirism.castleBlock.name=Castle Block
 
 #GUI
 gui.vampirism.revertback.head=Revert back to normal human
