--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -102,6 +102,7 @@ text.vampirism.lord.vampire_replace_absence=Another vampire has replaced you as 
 text.vampirism.lord.portal_disabled=This portal does not lead anywhere
 text.vampirism.lord.level_to_low=You vampire level is too low to be a Vampire Lord
 text.vampirism.guard_stay_away_level_low=Your vampire level is too low to travel to Dracula's castle. Stay away!
+text.vampirism.coffin.wrong_dimension=You can't sleep in this dimension.
 
 #Skill
 skill.vampirism.bat_skill=Toggle Batmode
